# multisignature

./: .gitignore  .history  Cargo.toml  README.md  candid.sh  canister_ids.json  cross_e2e_metrics.py  deployment.sh  dfx.json  e2e_loop.py  e2e_metrics.py  ledger.sh  load_wasm.sh  o.txt  package-lock.json  package.json  playwright.config.ts  run_0.json  run_1.json  run_2.json  rust-toolchain.toml  setup-ledger.sh  test_comparison_summary.txt  test_dashboard.html  upgrade.sh
.github/ISSUE_TEMPLATE/: analysis-task-template.md  standard-bug-template.md  standard-task-template.md
.github/workflows/: fe-e2e  fe-e2e.yml  mdbook.yml  rust.yml
blog/: next.config.mjs  package-lock.json  package.json
blog/pages/: index.mdx  test.mdx
docs/: CNAME  book.toml  package-lock.json  package.json  theme.config.jsx
docs/pages/: _meta.jsx  what-is-keygate.mdx
docs/src/: Introduction.md  SUMMARY.md  chapter_1.md
docs/src/advanced/: future.md  governance.md  recovery.md  transactions.md
docs/src/building/: architecture.md  implementation.md  integration.md  security.md
docs/src/cross-chain/: bridges.md  chain-signatures.md  challenge.md  mpc.md
docs/src/fundamentals/: account-abstraction.md  eoas.md  multisig.md  smart-accounts.md
docs/src/icp/: architecture.md  chain-key.md  cross-chain.md  threshold-ecdsa.md
docs/src/resources/: api.md  best-practices.md  examples.md  sdk.md
e2e/: welcome.spec.ts
e2e/fixtures/: auth.fixture.ts  vault.fixture.ts
e2e/pages/: home.page.ts
e2e/pages/assets/: assets.page.ts
e2e/pages/settings/: settings.page.ts
e2e/pages/transactions/: new-transaction.page.ts  transactions.page.ts
e2e/pages/vault-detail/: vault-detail.page.ts
e2e/pages/vaults/: vault-creation.page.ts  vaults.page.ts
e2e/specs/assets/: assets.spec.ts
e2e/specs/auth/: logout.spec.ts  registration.spec.ts
e2e/specs/landing/: landing.spec.ts
e2e/specs/settings/: settings.spec.ts
e2e/specs/transactions/: new-transaction.spec.ts
e2e/specs/vault-detail/: vault-detail.spec.ts
e2e/specs/vaults/: vaults.spec.ts
e2e/utils/: ledger.ts  logging.ts  screenshots.ts
i1/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
i2/: run_1.json  run_2.json  run_3.json  run_4.json  run_5.json
scripts/: deployment.sh  fund-icp.sh  run-account-tests.sh  run-integration-tests.sh
src/account/: Cargo.toml  account.did
src/account/src/: alloy_services.rs  evm.rs  evm_types.rs  hashof.rs  intent.rs  ledger.rs  lib.rs  memory.rs  tests.rs  types.rs
src/account/src/intent/: adapter.rs  execution.rs  mod.rs  system.rs
src/account/src/types/: ledger.rs  mod.rs
src/central/: Cargo.toml  central.did
src/central/src/: deployer.rs  lib.rs  tests.rs  types.rs
src/central/src/repository/: mod.rs  user.rs
src/core/: Cargo.toml
src/core/src/: error.rs  lib.rs  types.rs  utils.rs
src/dash/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/dash/src/: App.tsx  main.jsx
src/declarations/account/: account.did.d.ts  account.did.js  index.js
src/declarations/dash/: index.d.ts  index.js
src/landing/: components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/landing/src/: .ic-assets.json  (+2 more)
src/registration/: Cargo.toml  registration.did
src/registration/src/: deployer.rs  lib.rs  memory.rs  subaccount.rs  types.rs
test/: account.bats
test/integration/: Cargo.toml
test/integration/src/: account_tests.rs  central_tests.rs  lib.rs  setup.rs  types.rs  user_tests.rs  utils.rs
(+41 files in other folders)
