[package]
name = "account"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
once_cell = "1.15"
tokio = { version = "1.0", features = ["full", "macros"] }

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
ic-cdk-timers = "0.6"
hex = { version = "0.4.3", features = ["serde"] }
serde_cbor = "0.11.2"
serde_bytes = "0.11.14"
crc32fast = "1.4.0"
strum_macros = "0.26.2"
sha2 = "0.10.8"


