[package]
name = "central"
version = "0.0.1"
edition = "2021"
rust-version = "1.75.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.15"
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
crc32fast = "1.4.0"
sha2 = "0.10.8"

[dev-dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
libflate = "2.1.0"
pocket-ic = "5.0.0"
rand = "0.8.5"
