[package]
name = "keygate_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]  # Only compile as a Rust library, not a canister

[dependencies]
# Common dependencies that were in account/central
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
