[package]
name = "integration"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
serde_bytes = "0.11.15"
ic-stable-structures = "0.6.3"
icrc-ledger-types = "0.1.5"
ic-ledger-types = "0.10.0"
crc32fast = "1.4.0"
sha2 = "0.10.8"
pocket-ic = "5.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand = "0.8.5"
central = { path = "../../src/central" }
ciborium = "0.2.2"
keygate_core = { path = "../../src/core" }

[dev-dependencies]
libflate = "2.1.0"
